# soundblast-be

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  justfile  kill.sh
src/: main.rs
src/database/: db.rs  gridfs.rs  mod.rs
src/database/tables/: transcripts.rs
src/routes/: files.rs  mod.rs  status.rs  transcription.rs
src/service/: files.rs  mod.rs  transcription.rs
src/shared/: errors.rs  global.rs  mod.rs
