[package]
name = "app-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum_typed_multipart = "0.11.0"
byteorder = "1.5.0"
dotenv = "0.15.0"
env_logger = "0.11.1"
futures = "0.3.30"
futures-macro = "0.3.30"
futures-util = "0.3.30"
log = "0.4.20"
mongodb = "2.8.0"
serde = "1.0.196"
serde_json = "1.0.113"
tempfile = "3.9.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
vosk = "0.2.0"
